changed api tp app

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         </div>
 
         <div class="modal-body">
-          <form id="contact-form" action="http://api.cloudaria.io/cont" method="POST">
+          <form id="contact-form" action="http://app.cloudaria.io/cont" method="POST">
             <div class="form-group">
               <label for="name">Name</label>
               <input name="name" id="name" type="text" required class="form-control">
