--- a/demos/filmstrip-photo.html
+++ b/demos/filmstrip-photo.html
@@ -7,21 +7,18 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="page-header">Hello</h1>
+    <h1 class="page-header">Fashion Inspiration</h1>
     <div class="row">
       <div class="col-sm-8">
-        <h2>Article heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda optio repellendus error in quia hic nemo rem, ad quos illum modi. Officia provident sint fuga quam dicta, mollitia accusantium placeat?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laboriosam, modi vero voluptatem in adipisci, ipsum, et dolore maiores repellat esse quae minus. Dolores architecto sapiente explicabo qui porro repellendus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo enim itaque suscipit, ratione accusantium dolor sed id sit est consequatur aspernatur, ullam laborum reiciendis incidunt quisquam voluptatem perferendis veritatis deleniti.</p>
+        <p>If you are actually looking for some fashion inspiration, I'm sorry. This page is just a test bed to test our plugins.</p>
+        <p>This is how the plugin looks like. So seamless :)</p>
         <br>
-        <div id="cloudaria-embed" data-type="photo-filmstrip" data-campaign="20"></div>
+        <!-- Cloudaria embed code starts -->
+        <div id="cloudaria-embed" data-type="photo-filmstrip" data-campaign="98"></div>
         <script>
-        !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="//localhost:3000/embed.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}();
+        !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="//app.cloudaria.io/embed.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}();
         </script>
-      </div>
-      <div class="col-sm-4">
-        <h2>sidebar</h2>
+        <!-- Cloudria embed code ends -->
       </div>
     </div>
   </div>
