--- a/demos/feed.html
+++ b/demos/feed.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Photo Filmstrip</title>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.3.1/css/bootstrap.min.css">
+  <title>Document</title>
+  <style>
+  .container {
+    width: 960px;
+    margin: auto;
+  }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1 class="page-header">Fashion Inspiration</h1>
-    <p>If you are actually looking for some fashion inspiration, I'm sorry. This page is just a test bed to test our plugins.</p>
-    <p>This is how the plugin looks like.</p>
-    <br>
     <!-- Cloudaria embed code starts -->
-    <div id="cloudaria-embed" data-type="photo-filmstrip" data-campaign="20"></div>
+    <div id="cloudaria-embed" data-type="feed" data-campaign="13"></div>
     <script>
     !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="//localhost:3000/embed.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}();
     </script>
