--- a/demos/skyscraper-photo.html
+++ b/demos/skyscraper-photo.html
@@ -2,31 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>skyscraper photo</title>
+  <title>Skyscraper Photo</title>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="page-header">Hello</h1>
+    <h1 class="page-header">Fashion Inspiration</h1>
     <div class="row">
       <div class="col-sm-8">
-        <h2>Article heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda optio repellendus error in quia hic nemo rem, ad quos illum modi. Officia provident sint fuga quam dicta, mollitia accusantium placeat?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laboriosam, modi vero voluptatem in adipisci, ipsum, et dolore maiores repellat esse quae minus. Dolores architecto sapiente explicabo qui porro repellendus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo enim itaque suscipit, ratione accusantium dolor sed id sit est consequatur aspernatur, ullam laborum reiciendis incidunt quisquam voluptatem perferendis veritatis deleniti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda optio repellendus error in quia hic nemo rem, ad quos illum modi. Officia provident sint fuga quam dicta, mollitia accusantium placeat?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laboriosam, modi vero voluptatem in adipisci, ipsum, et dolore maiores repellat esse quae minus. Dolores architecto sapiente explicabo qui porro repellendus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo enim itaque suscipit, ratione accusantium dolor sed id sit est consequatur aspernatur, ullam laborum reiciendis incidunt quisquam voluptatem perferendis veritatis deleniti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda optio repellendus error in quia hic nemo rem, ad quos illum modi. Officia provident sint fuga quam dicta, mollitia accusantium placeat?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laboriosam, modi vero voluptatem in adipisci, ipsum, et dolore maiores repellat esse quae minus. Dolores architecto sapiente explicabo qui porro repellendus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo enim itaque suscipit, ratione accusantium dolor sed id sit est consequatur aspernatur, ullam laborum reiciendis incidunt quisquam voluptatem perferendis veritatis deleniti.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda optio repellendus error in quia hic nemo rem, ad quos illum modi. Officia provident sint fuga quam dicta, mollitia accusantium placeat?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laboriosam, modi vero voluptatem in adipisci, ipsum, et dolore maiores repellat esse quae minus. Dolores architecto sapiente explicabo qui porro repellendus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo enim itaque suscipit, ratione accusantium dolor sed id sit est consequatur aspernatur, ullam laborum reiciendis incidunt quisquam voluptatem perferendis veritatis deleniti.</p>
+        <p>If you are actually looking for some fashion inspiration, I'm sorry. This page is just a test bed to test our plugins.</p>
+        <p>This is how the plugin looks like.</p>
       </div>
       <div class="col-sm-4">
-        <h2>sidebar</h2>
-        <div id="cloudaria-embed" data-type="photo-skyscraper" data-campaign="20"></div>
+        <div id="cloudaria-embed" data-type="photo-skyscraper" data-campaign="20" data-mode="gallery"></div>
         <script>
         !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="//localhost:3000/embed.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}();
         </script>
