--- a/content-experiences.html
+++ b/content-experiences.html
@@ -548,24 +548,24 @@
                   <div class="fus-header">
                     <h3 class="georgia " style="color:#fff;">See how Cloudaria can help you deliver better customer experiences.</h3>
                   </div>
-                   <form name="contact" action="">
+                   <form id="send_contact" name="contact" action="http://staging.cloudaria.io/cont" >
                   <div class="row" style="margin-top:20px;">
 
                       <div class="col-md-4">
                         <div class="form_title">First Name*</div>
 
-                        <input type="text" class="form-control flat" placeholder="Satya">
+                        <input type="text" class="form-control flat" placeholder="Satya" name="first_name">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Last Name*</div>
 
-                        <input type="text" class="form-control flat" placeholder="Nadella">
+                        <input type="text" class="form-control flat" placeholder="Nadella" name="last_name">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Work Email*</div>
-                        <input type="text" class="form-control flat" placeholder="satyan@microsoft.com">
+                        <input type="text" class="form-control flat" placeholder="satyan@microsoft.com" name="email">
 
                       </div>
                   </div>
@@ -573,19 +573,19 @@
                       <div class="col-md-4">
                         <div class="form_title">Phone Number (Optional)</div>
 
-                        <input type="text" class="form-control flat" placeholder="+1 (123) 456-7890">
+                        <input type="text" class="form-control flat" placeholder="+1 (123) 456-7890" name="phone">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Job Title*</div>
 
-                        <input type="text" class="form-control flat" placeholder="CEO">
+                        <input type="text" name="job" class="form-control flat" placeholder="CEO">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Company Name*</div>
 
-                        <input type="text" class="form-control flat" placeholder="Microsoft">
+                        <input type="text" name="company" class="form-control flat" placeholder="Microsoft">
 
                       </div>
                   </div>
@@ -593,12 +593,12 @@
                       <div class="col-md-12">
                          <div class="form_title">Send us a message (Optional)</div>
 
-                        <textarea type="text" class="form-control flat" rows="5" placeholder="How can Cloudaria help you?" style="color:rgb(89,89,89);"></textarea>
+                        <textarea name="how" type="text" class="form-control flat" rows="5" placeholder="How can Cloudaria help you?" style="color:rgb(89,89,89);"></textarea>
 
                       </div>
                   </div>
 
-                   <a href="#" target="_blank" class="btn btn-lg fus-btn-white " style="margin-top:30px;">Submit</a>
+                   <input type="submit" class="btn btn-lg fus-btn-white" style="margin-top:30px;">
 
 
                   </form>
@@ -654,7 +654,7 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.50/jquery.form.min.js"></script>
      <script type="text/javascript">
 
 
@@ -687,7 +687,17 @@ $('.feature_scroll').click(function(e) {
           po.src = 'https://apis.google.com/js/platform.js';
           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
+
+    $(document).ready(function() {
+    var form = $('#send_contact');
+    form.ajaxForm(function() {
+      form.html('<p style="color:white;font-size:20px;">Thanks for your interest. We will get in touch with you shortly.</p>');
+    });
+  });
+
       </script>
+
+
 
 
   </body>
