--- a/visual-commerce.html
+++ b/visual-commerce.html
@@ -394,7 +394,7 @@
                   <div class="fus-header">
                     <h3 class="georgia " style="color:#fff;">See how Cloudaria can help you deliver better customer experiences.</h3>
                   </div>
-                   <form id="send_contact" name="contact" action="http://staging.cloudaria.io/cont">
+                   <form method="post" id="send_contact" name="contact" action="http://staging.cloudaria.io/cont">
                   <div class="row" style="margin-top:20px;">
 
                       <div class="col-md-4">
