--- a/content-experiences.html
+++ b/content-experiences.html
@@ -318,11 +318,13 @@
               <li class="media">
 
                 <div class="media-body text-center aria-hover" >
+
                   <p class="media-heading text-center"></p>
                   <p class="col_5_font media-text" style="font-size:1.2em!important;line-height:2em;">Publishing Rhythm</p>
                   <p class="col_5_font media-text" style="font-size:1.2em!important;line-height:2em;">Content Moderations</p>
                   <p class="col_5_font media-text" style="font-size:1.2em!important;line-height:2em;">Call-to-Actions</p>
                   <p class="col_5_font media-text" style="font-size:1.2em!important;line-height:2em;">Visualization Gallery</p>
+
 
 
                 </div>
@@ -548,7 +550,7 @@
                   <div class="fus-header">
                     <h3 class="georgia " style="color:#fff;">See how Cloudaria can help you deliver better customer experiences.</h3>
                   </div>
-                   <form id="send_contact" name="contact" action="http://staging.cloudaria.io/cont" >
+                   <form method="post" id="send_contact" name="contact" action="http://staging.cloudaria.io/cont" >
                   <div class="row" style="margin-top:20px;">
 
                       <div class="col-md-4">
