--- a/content-experiences.html
+++ b/content-experiences.html
@@ -122,7 +122,7 @@
           <li><a href="#feature3" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-trophy light-grey"></i><span class="fus-subtitle">Employer Brand<br> Campaigns
 
 </span></a></li>
-          <li><a href="#feature4" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-flag light-grey"></i> <span class="fus-subtitle">Sales <br/> Enablement
+          <li><a href="#feature4" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-flag light-grey"></i> <span class="fus-subtitle">Employee <br/> Advocacy
 
 </span></a></li>
         <li><a href="#feature5" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"> <i class="fa fa-bullhorn light-grey"></i><span class="fus-subtitle">Events and <br>In-Venue
@@ -215,16 +215,16 @@
               <div class="col-md-12  fus-fullwidth-content">
                 <div class="fus-tab-center animated fadeIn">
                   <div class="fus-header">
-                    <h3 class="georgia light-grey">Sales Enablement</h3>
+                    <h3 class="georgia light-grey">Employee Advocacy</h3>
                   </div>
                   <p>
                     <a class="animated bounceIn" href="#" target="_blank">
                   <img src="images/sales-enablement.jpg"  class="image-carousel"  alt="Placeholder of Your Feature">
                 </a>
                   </p>
-                  <p style="line-height:1.6em;margin-top:-15px;">There’s nothing better than highlighting your most valuable assets – your employees to showcase your employer brand. Fuel your employee engagement and recruiting with visual stories from employees, snapshots of office culture and the cool work they are doing. </p>
+                  <p style="line-height:1.6em;margin-top:-15px;">Your employees can drive 10X more reach and engagement of your content than your official channels. Empowering them to have a share in your brand voice dramatically increases content ROI, and employee productivity and belongingness. Easily curate and distribute brand-safe content - both as a branded content hub and a convenient go-to mobile app. Employees easily search and discover on-demand content, materials and seamlessly share with their networks and prospects. </p>
 
-                  <p style="line-height:1.6em;margin-top:-15px;">Cloudaria Experiences not only lets you easily highlight elite technology, big ideas and really cool people in your organization, it also lets you drive recruiting effectiveness with interesting widgets for social referrals, meet the team and relevant job openings. </p>
+                  <p style="line-height:1.6em;margin-top:-15px;">The biggest prize you get from Cloudaria Experiences is attention - content (no matter what the source) is presented with your brand's ecosystem, powered by our Recommendations technology, so that the reader is always hooked on. </p>
 
                   <a href="#contact_form"  class="scrollto btn btn-lg" style="margin-top:10px;">Request a Demo</a>
                 </div>
@@ -480,7 +480,7 @@
                   <div class="fus-header">
                     <h3 class="georgia light-grey">Content Intelligence for Each Use Case</h3>
                   </div>
-                  <p style="line-height:1.6em;margin-top:-15px;color: #808184;font-size: 18px">For each piece of content and each of your channels, examine actionable analytics - from reach, engagement and distribution to what’s driving conversion and commerce. From campaign effectiveness and metrics to which content is performing the best and who are the most engaged community members, Cloudaria Experiences provides a detailed Analytics Suite for each of your campaigns to help you take better decisions. </p>
+                  <p style="line-height:1.6em;margin-top:-15px;color: #808184;font-size: 18px">For each piece of content and each of your channels, examine actionable analytics - from reach, engagement and distribution to what’s driving conversion and commerce. From campaign effectiveness and metrics to which content is performing the best and who are the most engaged community members, Cloudaria Experiences provides a detailed Analytics Suite for each of your content hubs to help you take better decisions. </p>
  
 
 
@@ -628,20 +628,20 @@
             <div class="row"  style="padding-top:0px;padding-bottom:0px;">
 
               <div class="col-md-9 col-sm-9 col-xs-12" style="padding-top:20px;padding-bottom:20px;">
-                <a class="footer_links">© 2015 Cloudaria, Inc</a>
-                <a class="footer_links">Contact  </a>
-                 <a class="footer_links">Blog   </a>
-                  <a class="footer_links">Terms of Service   </a>
-                  <a class="footer_links">Privacy    </a>
+                <a href="#" target="_blank" class="footer_links">© 2015 Cloudaria, Inc</a>
+                <a href="/contact.html" target="_blank" class="footer_links">Contact  </a>
+                 <a href="http://blog.cloudaria.io" target="_blank" class="footer_links">Blog   </a>
+                  <a href="/terms.html" target="_blank" class="footer_links">Terms of Service   </a>
+                  <a href="/privacy" target="_blank" class="footer_links">Privacy    </a>
 
  
                 </div>
         <div class="col-md-3 col-sm-3  col-xs-12 text-right footer_social" style="padding-top:15px;padding-bottom:0px;">
-  <a href="" class="round-icons"><i class="fa fa-facebook fa-2x"></i></a>
+  <a href="https://www.facebook.com/cloudaria.io" target="_blank" class="round-icons"><i class="fa fa-facebook fa-2x"></i></a>
 
-  <a href="" class="round-icons"><i class="fa fa-twitter fa-2x"></i></a>
+  <a href="https://twitter.com/cloudaria1" target="_blank"  class="round-icons"><i class="fa fa-twitter fa-2x"></i></a>
 
-  <a href="" class="round-icons"><i class="fa fa-linkedin fa-2x"></i></a>
+  <a href="https://www.linkedin.com/company/cloudaria" target="_blank" class="round-icons"><i class="fa fa-linkedin fa-2x"></i></a>
 </div>
 
 
