--- a/visual-commerce.html
+++ b/visual-commerce.html
@@ -358,7 +358,7 @@
                     <h3 class="georgia light-grey">Insights and Visual Analytics</h3>
                   </div>
                   <p style="line-height:1.6em;margin-top:-15px;color: #808184;font-size: 18px">
-                    Cloudaria Visual Commerce combines the seed metrics of each content piece from Instagram, Twitter, Pinterest, etc. with the enhanced reach, engagement, distribution and actions that Visual Commerce gets you and tracks a full range of funnel metrics to track and properly attribute sales.</p>
+                    Cloudaria Visual Commerce combines quantitative and behavioral metrics of user engagement through visual media and uncovers insights for your brand. Right from a full funnel view of how much your conversion rates increase by integrating user images in the purchase path, to detailed clickstream analysis and content leaderboard, Cloudaria helps you discover user behavior, trends and also enables you to engage with top visual creators in your industry seamlessly.</p>
  
 
 
