--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
             <div class="row"  style="padding-top:0px;padding-bottom:0px;">
 
               <div class="col-md-9 col-sm-9 col-xs-12" style="padding-top:20px;padding-bottom:20px;">
-                <a class="footer_links">© 2015 Cloudaria, Inc</a>
-                <a class="footer_links">Contact  </a>
-                 <a class="footer_links">Blog   </a>
-                  <a class="footer_links">Terms of Service   </a>
-                  <a class="footer_links">Privacy    </a>
+                <a href="#" target="_blank" class="footer_links">© 2015 Cloudaria, Inc</a>
+                <a href="/contact.html" target="_blank" class="footer_links">Contact  </a>
+                 <a href="http://blog.cloudaria.io" target="_blank" class="footer_links">Blog   </a>
+                  <a href="/terms.html" target="_blank" class="footer_links">Terms of Service   </a>
+                  <a href="/privacy" target="_blank" class="footer_links">Privacy    </a>
 
  
                 </div>
-        <div class="col-md-3 col-sm-3 col-xs-12 text-right footer_social " style="padding-top:15px;padding-bottom:0px;">
-  <a href="" class="round-icons"><i class="fa fa-facebook fa-2x"></i></a>
+        <div class="col-md-3 col-sm-3  col-xs-12 text-right footer_social" style="padding-top:15px;padding-bottom:0px;">
+  <a href="https://www.facebook.com/cloudaria.io" target="_blank" class="round-icons"><i class="fa fa-facebook fa-2x"></i></a>
 
-  <a href="" class="round-icons"><i class="fa fa-twitter fa-2x"></i></a>
+  <a href="https://twitter.com/cloudaria1" target="_blank"  class="round-icons"><i class="fa fa-twitter fa-2x"></i></a>
 
-  <a href="" class="round-icons"><i class="fa fa-linkedin fa-2x"></i></a>
+  <a href="https://www.linkedin.com/company/cloudaria" target="_blank" class="round-icons"><i class="fa fa-linkedin fa-2x"></i></a>
 </div>
 
 
