--- a/content-experiences.html
+++ b/content-experiences.html
@@ -556,18 +556,18 @@
                       <div class="col-md-4">
                         <div class="form_title">First Name*</div>
 
-                        <input type="text" class="form-control flat" placeholder="Satya" name="first_name">
+                        <input required type="text" class="form-control flat" placeholder="Satya" name="first_name">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Last Name*</div>
 
-                        <input type="text" class="form-control flat" placeholder="Nadella" name="last_name">
+                        <input required type="text" class="form-control flat" placeholder="Nadella" name="last_name">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Work Email*</div>
-                        <input type="text" class="form-control flat" placeholder="satyan@microsoft.com" name="email">
+                        <input required type="text" class="form-control flat" placeholder="satyan@microsoft.com" name="email">
 
                       </div>
                   </div>
@@ -581,13 +581,13 @@
                       <div class="col-md-4">
                         <div class="form_title">Job Title*</div>
 
-                        <input type="text" name="job" class="form-control flat" placeholder="CEO">
+                        <input required type="text" name="job" class="form-control flat" placeholder="CEO">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Company Name*</div>
 
-                        <input type="text" name="company" class="form-control flat" placeholder="Microsoft">
+                        <input required type="text" name="company" class="form-control flat" placeholder="Microsoft">
 
                       </div>
                   </div>
