--- a/visual-commerce.html
+++ b/visual-commerce.html
@@ -400,18 +400,18 @@
                       <div class="col-md-4">
                         <div class="form_title">First Name*</div>
 
-                        <input name="first_name" type="text" class="form-control flat" placeholder="Satya">
+                        <input required name="first_name" type="text" class="form-control flat" placeholder="Satya">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Last Name*</div>
 
-                        <input name="last_name" type="text" class="form-control flat" placeholder="Nadella">
+                        <input required name="last_name" type="text" class="form-control flat" placeholder="Nadella">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Work Email*</div>
-                        <input name="email" type="text" class="form-control flat" placeholder="satyan@microsoft.com">
+                        <input required name="email" type="text" class="form-control flat" placeholder="satyan@microsoft.com">
 
                       </div>
                   </div>
@@ -425,13 +425,13 @@
                       <div class="col-md-4">
                         <div class="form_title">Job Title*</div>
 
-                        <input name="job" type="text" class="form-control flat" placeholder="CEO">
+                        <input required name="job" type="text" class="form-control flat" placeholder="CEO">
 
                       </div>
                       <div class="col-md-4">
                         <div class="form_title">Company Name*</div>
 
-                        <input name="company" type="text" class="form-control flat" placeholder="Microsoft">
+                        <input required name="company" type="text" class="form-control flat" placeholder="Microsoft">
 
                       </div>
                   </div>
