--- a/content-experiences.html
+++ b/content-experiences.html
@@ -114,17 +114,22 @@
         </div>
 
         <ul class="nav nav-tabs fus-tabs" style="margin-top:-90px;" >
-          <li class="active"><a href="#feature1" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-newspaper-o light-grey"></i></i><span class="fus-subtitle">Brand<br/> Magazines
+          <li class="active">
+          <a href="#feature1" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-newspaper-o light-grey"></i></i><span class="fus-subtitle">Brand<br/> Magazines
 </span></a></li>
+
+<li><a href="#feature4" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-flag light-grey"></i> <span class="fus-subtitle">Employee <br/> Advocacy
+
+</span></a></li>
+
+
           <li><a href="#feature2" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa light-grey" style="padding-right:35px;padding-left:35px;">#</i> <span class="fus-subtitle">UGC Brand<br> Marketing
 
 </span></a></li>
           <li><a href="#feature3" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-trophy light-grey"></i><span class="fus-subtitle">Employer Brand<br> Campaigns
 
 </span></a></li>
-          <li><a href="#feature4" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"><i class="fa fa-flag light-grey"></i> <span class="fus-subtitle">Employee <br/> Advocacy
 
-</span></a></li>
         <li><a href="#feature5" class="feature_scroll" data-href="feature_tab_div" data-toggle="tab"> <i class="fa fa-bullhorn light-grey"></i><span class="fus-subtitle">Events and <br>In-Venue
 
 </span></a></li>
