--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             <div class="row"  style="padding-top:0px;padding-bottom:0px;">
 
               <div class="col-md-9 col-sm-9 col-xs-12" style="padding-top:20px;padding-bottom:20px;">
-                <a href="#" target="_blank" class="footer_links">© 2015 Cloudaria, Inc</a>
-                <a href="/contact.html" target="_blank" class="footer_links">Contact  </a>
+                <a class="footer_links">© 2015 Cloudaria, Inc</a>
+                <a href="/contactus" target="_blank" class="footer_links">Contact  </a>
                  <a href="http://blog.cloudaria.io" target="_blank" class="footer_links">Blog   </a>
-                  <a href="/terms.html" target="_blank" class="footer_links">Terms of Service   </a>
+                  <a href="/terms" target="_blank" class="footer_links">Terms of Service   </a>
                   <a href="/privacy" target="_blank" class="footer_links">Privacy    </a>
 
  
