fixing minor stuff

--- a/contactus.html
+++ b/contactus.html
@@ -109,7 +109,7 @@
                   <div class="fus-header">
                     <h3 class="georgia " style="color:#fff;">Drop us a line.</h3>
                   </div>
-                   <form method="post" id="send_contact" name="contact" action="http://staging.cloudaria.io/cont">
+                   <form method="post" id="send_contact" name="contact" action="https://app.cloudaria.io/cont">
                   <div class="row" style="margin-top:20px;">
 
                       <div class="col-md-4">
